# procinfo

./: CMakeLists.txt  README.md  conanfile.txt  docker.sh
.github/workflows/: build.yml
cli/: main.cpp
core/: CMakeLists.txt  CpuCycles.cpp  CpuCyclesMsvc.cpp  CpuInformation.cpp
core/include/core/: CpuCycles.h  CpuInformation.h
test_core/: CMakeLists.txt  TestCpuInformation.cpp
